# asian_mtl

./: .gitignore  README.md  pyproject.toml
asian_mtl/evaluation/: cli.py  evaluation_pipeline.py
asian_mtl/models/: base.py
docs/: MACHINE_TL.md  MODEL_RESEARCH.md  OPTIMIZATION_CPU.md  PROD.md
novel_tl_models/evaluation/: cli.py  evaluation_pipeline.py
novel_tl_models/models/: base.py
novel_tl_models/scripts/: evaluate.py  evaluate_quantized_dynamic.py
scripts/: evaluate.py  evaluate_quantized_dynamic.py
scripts/evaluation/: eval.py
scripts/evaluation/configs/: helsinki.yaml
