[tool.poetry]
name = "asian_mtl"
version = "0.1.1"
description = "Seamlessly translate East Asian texts with deep learning models."
authors = ["Joseph Chen <jchen42703@gmail.com>"]
repository = "https://github.com/EasierMTL/asian_mtl"
readme = "README.md"
keywords = ["nlp", "translation"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.18.0"
pydantic = "^1.9.0"
torch = "^1.11.0"
sentencepiece = "^0.1.96"
boto3 = "^1.21.40"
botocore = "^1.24.43"
pyquery = "^1.4.3"
optimum = "^1.1.0"
gdown = "^4.4.0"
datasets = "^2.1.0"
tqdm = "^4.64.0"
psutil = "^5.9.4"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
